[package]
name = "intuitils"
version = "0.0.3"
edition = "2021"
description = "utilities for intuis projects"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
crossterm = { version = "0.28", features = ["serde"] }
toml = "0.8"
xdg = "2.5"
thiserror = "1"
anyhow = "1"
