[package]
name = "intuitils"
version = "0.0.4"
edition = "2021"
description = "utilities for intuis projects"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
toml = "0.8"
xdg = "2.5"
thiserror = "1"
anyhow = "1"
futures = "0.3"
ratatui = { version = "0.29" }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = "0.7"
